--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "ReactND-MyReads",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "escape-string-regexp": "^1.0.5",
-    "form-serialize": "^0.7.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1",
-    "react-scripts": "1.0.10",
-    "sort-by": "^1.2.0"
+    "react-router-dom": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,5 +14,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "react-scripts": "1.0.10"
+  }
 }
